// import React from 'react';
// // eslint-disable-next-line import/no-extraneous-dependencies
// import { mountWithIntl } from 'terra-enzyme-intl';
// import Pill from '../../src/private/_Pill';

// describe('Pill', () => {
//   it('should render a basic pill', () => {
//     const wrapper = mountWithIntl(<Pill id="Default" label="Default" />);
//     expect(wrapper).toMatchSnapshot();
//   });

//   it('should render a removable pill', () => {
//     const wrapper = mountWithIntl(<Pill id="Removable" isRemovable label="Removable" />);
//     expect(wrapper).toMatchSnapshot();
//   });

//   it('should render a selectable pill', () => {
//     const wrapper = mountWithIntl(<Pill id="Selectable" label="Selectable" onSelect={() => jest.fn()} />);
//     expect(wrapper).toMatchSnapshot();
//   });

//   it('should render a selectable and removable pill', () => {
//     const wrapper = mountWithIntl(<Pill id="SelectableRemovable" label="Selectable and Removable" isRemovable onSelect={() => jest.fn()} />);
//     expect(wrapper).toMatchSnapshot();
//   });
// });
