// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pill should render a basic pill 1`] = `
<InjectIntl(Pill)
  id="Default"
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": null,
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": null,
    }
  }
  label="Default"
>
  <Pill
    id="Default"
    intl={
      Object {
        "defaultFormats": Object {},
        "defaultLocale": "en",
        "formatDate": [Function],
        "formatHTMLMessage": [Function],
        "formatMessage": [Function],
        "formatNumber": [Function],
        "formatPlural": [Function],
        "formatRelative": [Function],
        "formatTime": [Function],
        "formats": Object {},
        "formatters": Object {
          "getDateTimeFormat": [Function],
          "getMessageFormat": [Function],
          "getNumberFormat": [Function],
          "getPluralFormat": [Function],
          "getRelativeFormat": [Function],
        },
        "locale": "en",
        "messages": null,
        "now": [Function],
        "onError": [Function],
        "textComponent": "span",
        "timeZone": null,
      }
    }
    label="Default"
  >
    <ResponsiveElement
      onResize={[Function]}
      responsiveTo="window"
    >
      <div
        className="pill-list-item"
        role="listitem"
      >
        <div
          aria-describedby="interaction-hint-Default"
          aria-label="Default"
          className="pill"
          data-terra-pill={true}
          data-terra-pills-show-focus-styles={true}
          id="Default"
        >
          <span
            aria-hidden="true"
            className="pill-label"
          >
            Default
          </span>
        </div>
      </div>
    </ResponsiveElement>
  </Pill>
</InjectIntl(Pill)>
`;

exports[`Pill should render a removable pill 1`] = `
<InjectIntl(Pill)
  id="Removable"
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": null,
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": null,
    }
  }
  isRemovable={true}
  label="Removable"
>
  <Pill
    id="Removable"
    intl={
      Object {
        "defaultFormats": Object {},
        "defaultLocale": "en",
        "formatDate": [Function],
        "formatHTMLMessage": [Function],
        "formatMessage": [Function],
        "formatNumber": [Function],
        "formatPlural": [Function],
        "formatRelative": [Function],
        "formatTime": [Function],
        "formats": Object {},
        "formatters": Object {
          "getDateTimeFormat": [Function],
          "getMessageFormat": [Function],
          "getNumberFormat": [Function],
          "getPluralFormat": [Function],
          "getRelativeFormat": [Function],
        },
        "locale": "en",
        "messages": null,
        "now": [Function],
        "onError": [Function],
        "textComponent": "span",
        "timeZone": null,
      }
    }
    isRemovable={true}
    label="Removable"
  >
    <ResponsiveElement
      onResize={[Function]}
      responsiveTo="window"
    >
      <div
        className="pill-list-item"
        role="listitem"
      >
        <div
          aria-describedby="interaction-hint-Removable"
          aria-label="Removable"
          className="pill is-focusable is-removable"
          data-terra-pill={true}
          data-terra-pills-show-focus-styles={true}
          id="Removable"
          onBlur={[Function]}
          onKeyDown={[Function]}
          onMouseDown={[Function]}
          tabIndex="0"
        >
          <span
            aria-hidden="true"
            className="pill-label"
          >
            Removable
          </span>
          <span
            aria-hidden="true"
            className="pill-remove-button"
          >
            <span
              className="clear-icon"
            />
          </span>
          <VisuallyHiddenText
            aria-hidden="true"
            id="interaction-hint-Removable"
            text=", Terra.pills.pillHint.removable"
          >
            <span
              aria-hidden="true"
              className="visually-hidden-text"
              id="interaction-hint-Removable"
            >
              , Terra.pills.pillHint.removable
            </span>
          </VisuallyHiddenText>
        </div>
      </div>
    </ResponsiveElement>
  </Pill>
</InjectIntl(Pill)>
`;

exports[`Pill should render a selectable and removable pill 1`] = `
<InjectIntl(Pill)
  id="SelectableRemovable"
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": null,
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": null,
    }
  }
  isRemovable={true}
  label="Selectable and Removable"
  onSelect={[Function]}
>
  <Pill
    id="SelectableRemovable"
    intl={
      Object {
        "defaultFormats": Object {},
        "defaultLocale": "en",
        "formatDate": [Function],
        "formatHTMLMessage": [Function],
        "formatMessage": [Function],
        "formatNumber": [Function],
        "formatPlural": [Function],
        "formatRelative": [Function],
        "formatTime": [Function],
        "formats": Object {},
        "formatters": Object {
          "getDateTimeFormat": [Function],
          "getMessageFormat": [Function],
          "getNumberFormat": [Function],
          "getPluralFormat": [Function],
          "getRelativeFormat": [Function],
        },
        "locale": "en",
        "messages": null,
        "now": [Function],
        "onError": [Function],
        "textComponent": "span",
        "timeZone": null,
      }
    }
    isRemovable={true}
    label="Selectable and Removable"
    onSelect={[Function]}
  >
    <ResponsiveElement
      onResize={[Function]}
      responsiveTo="window"
    >
      <div
        className="pill-list-item"
        role="listitem"
      >
        <button
          aria-haspopup="dialog"
          className="pill is-focusable is-selectable is-removable is-selectable-and-removable"
          data-terra-pill={true}
          data-terra-pills-show-focus-styles={true}
          id="SelectableRemovable"
          onBlur={[Function]}
          onClick={[Function]}
          onKeyDown={[Function]}
          onMouseDown={[Function]}
          tabIndex="0"
          type="button"
        >
          <span
            className="pill-label"
          >
            Selectable and Removable
          </span>
          <span
            aria-hidden="true"
            className="pill-remove-button"
          >
            <span
              className="clear-icon"
            />
          </span>
          <VisuallyHiddenText
            text=", Terra.pills.pillHint.selectableAndRemovable"
          >
            <span
              className="visually-hidden-text"
            >
              , Terra.pills.pillHint.selectableAndRemovable
            </span>
          </VisuallyHiddenText>
        </button>
      </div>
    </ResponsiveElement>
  </Pill>
</InjectIntl(Pill)>
`;

exports[`Pill should render a selectable pill 1`] = `
<InjectIntl(Pill)
  id="Selectable"
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": null,
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": null,
    }
  }
  label="Selectable"
  onSelect={[Function]}
>
  <Pill
    id="Selectable"
    intl={
      Object {
        "defaultFormats": Object {},
        "defaultLocale": "en",
        "formatDate": [Function],
        "formatHTMLMessage": [Function],
        "formatMessage": [Function],
        "formatNumber": [Function],
        "formatPlural": [Function],
        "formatRelative": [Function],
        "formatTime": [Function],
        "formats": Object {},
        "formatters": Object {
          "getDateTimeFormat": [Function],
          "getMessageFormat": [Function],
          "getNumberFormat": [Function],
          "getPluralFormat": [Function],
          "getRelativeFormat": [Function],
        },
        "locale": "en",
        "messages": null,
        "now": [Function],
        "onError": [Function],
        "textComponent": "span",
        "timeZone": null,
      }
    }
    label="Selectable"
    onSelect={[Function]}
  >
    <ResponsiveElement
      onResize={[Function]}
      responsiveTo="window"
    >
      <div
        className="pill-list-item"
        role="listitem"
      >
        <button
          aria-haspopup="dialog"
          className="pill is-focusable is-selectable"
          data-terra-pill={true}
          data-terra-pills-show-focus-styles={true}
          id="Selectable"
          onBlur={[Function]}
          onClick={[Function]}
          onKeyDown={[Function]}
          onMouseDown={[Function]}
          tabIndex="0"
          type="button"
        >
          <span
            className="pill-label"
          >
            Selectable
          </span>
          <VisuallyHiddenText
            text=", Terra.pills.pillHint.selectable"
          >
            <span
              className="visually-hidden-text"
            >
              , Terra.pills.pillHint.selectable
            </span>
          </VisuallyHiddenText>
        </button>
      </div>
    </ResponsiveElement>
  </Pill>
</InjectIntl(Pill)>
`;
